crates/reinhardt-di/tests/compile_fail/injectable_on_enum.stderr
error: #[injectable] can only be applied to structs
 --> tests/compile_fail/injectable_on_enum.rs:5:6
  |
5 | enum ServiceKind {
  |      ^^^^^^^^^^^
